added a bg image and some text

--- a/index.html
+++ b/index.html
@@ -1,1 +1,16 @@
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <title>Practicing with HTML</title>
+    <link rel="stylesheet" href="styles.css">
+</head>
 
+<body>
+    <div>
+        <H1>
+            Practicing with HTML
+        </H1>
+        <p> Hello World </p>
+    </div>
+</body>
